homepage and search results done, book page wip

--- a/frontend/bookpage.html
+++ b/frontend/bookpage.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rate My Textbook</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Book Name</title>
+    <link rel="stylesheet" href="bookpage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
-<body>    
+<body>
     <div class="hero">
         <div class="header">
             <div class="logo gradient-text">Rate My Textbook</div>
@@ -29,22 +29,5 @@
                 </div>
             </div>
         </div>
-        <div class="bot-hero">
-            <div class="search-title">
-              <div class="search-text">
-                Find Your Textbook!
-              </div>
-              <div>
-                <form class="search-bar" action="/search" method="GET">
-                    <input type="text"  name="query" placeholder="Search..." required />
-                    <button type="submit">&#x1F50D;</button>
-                </form>
-              </div>
-            </div>
-          </div>
-    </div>
-    <div class="footer">
-        <div class="footer-text">Copyright © Rate My Textbooks 2025</div>
-    </div>
 </body>
 </html>
