--- a/frontend/searchres.html
+++ b/frontend/searchres.html
@@ -35,7 +35,7 @@
                 Textbook Results!
               </div>
               <div>
-                <form class="search-bar" action="/search" method="GET">
+                <form class="search-bar" action="search" method="GET">
                     <input type="text"  name="query" placeholder="Search..." required />
                     <button type="submit">&#x1F50D;</button>
                 </form>
